@@ -7,6 +7,7 @@ by Alex Rabe & NextGEN DEV Team
 * TODO : Integrate jQuery Cycle as NON-Flash slideshow 
 * TODO : Adding Google Sitemaps for Images
 * Changed : New menu icon and screen icon (THX to Ben Dunkle)
+* Changed : Load frontend libs always
 
 = V1.5.4 - 14.06.2010 =
 * Bugfix : No resize of smaller images
